re-edit of the website

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body onresize="getWidth()" onload="getWidth()">
+<body>
     <!-- nav bar starts here -->
     <div class="nav-holder"></div>
     <nav id="nav">
         <div class="container">
-            <img src="./image/SVG/logo.svg" alt="">
-            <a id="menu-but" class="burger-menu" href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
+            <img src="./image/SVG/logo.svg" alt="Logo">
             <div class="nav-itoms-desktop">
                 <a href="#about">About</a>
                 <a href="./image/chiranjeev-cb.pdf" target="_blank">Download</a>
                 <a href="./works.html">Works</a>
                 <a href="contact.html">Contact</a>
             </div>
+            <button id="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-itoms-mob">
                 <a href="#about">About</a>
                 <a href="./image/chiranjeev-cb.pdf" target="_blank">Download</a>
