--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="nav-itoms-mob">
                 <a href="#about">About</a>
                 <a href="./image/chiranjeev-cb.pdf" target="_blank">Download</a>
-                <a href="#my-works">Works</a>
+                <a href="./works.html">Works</a>
                 <a href="contact.html">Contact</a>
             </div>
         </div>
