form-validate corrections

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <i class="icon tel-err-icon bi bi-exclamation-circle-fill"></i>
                     <i class="icon tel-suc-icon bi bi-check-circle-fill"></i>
                     <div class="error tel-err"></div>
-                    <input type="email" name="emailId" id="emailId" placeholder="Email Id">
+                    <input type="text" name="emailId" id="emailId" placeholder="Email Id">
                     <i class="icon email-err-icon bi bi-exclamation-circle-fill"></i>
                     <i class="icon email-suc-icon bi bi-check-circle-fill"></i>
                     <div class="error email-err"></div>
