--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
                     <i class="icon email-suc-icon bi bi-check-circle-fill"></i>
                     <div class="error email-err"></div>
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message..."></textarea>
+                    <div class="error message-error"></div>
                     <div class="buttons-div">
                         <button id="submit" type="submit" value="submit">Submit</button>
                         <button id="clear" type="reset">Clear Form</button>
