--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./image/SVG/logo.svg" alt="Logo">
             <div class="nav-itoms-desktop">
                 <a href="#about">About</a>
-                <a href="./image/chiranjeev-cb.pdf" target="_blank">Download</a>
+                <a href="./image/chiranjeev-mohanty-front-end-developer-resume.pdf" target="_blank">Download</a>
                 <a href="./works.html">Works</a>
                 <a href="contact.html">Contact</a>
             </div>
