changes file path of cb

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Hey There! I am a Designer and Developer.</h1>
             <p>“Optimism is an occupational hazard of programming: feedback is the treatment.” </p>
             <div class="head-buttons">
-                <a href="./image/chiranjeev-cb.pdf" target="_blank" class="download-but">Download CV</a>
+                <a href="./image/chiranjeev-mohanty-front-end-developer-resume.pdf" target="_blank" class="download-but">Download CV</a>
                 <a href="#footer" class="arrow-down-button"><svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 23.43 13.91">
                         <defs>
